syntax = "proto3";

package auth;

option go_package = "TKMall/build/proto_gen/auth";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
  rpc TestGateWayMsg(Empty) returns (TestGateWayMsgResp) {}
}

message Empty {}
message TestGateWayMsgResp { string msg = 1; }

message DeliverTokenReq { int32 user_id = 1; }
message DeliveryResp { string token = 1; }

message VerifyTokenReq { string token = 1; }
message VerifyResp { bool res = 1; }
