syntax = "proto3";

package user;

option go_package = "TKMall/build/proto_gen/user";

service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) {}
  rpc Login(LoginReq) returns (LoginResp) {}
}

message RegisterReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp { int64 user_id = 1; }

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  int64 user_id = 1;
  string token = 2;
}
